Update search indexing after trunk merge
